<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ahnsh1996.keepit.viewmodel.KeepDataDetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{viewModel.title}"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="제목" />

            <TextView
                android:id="@+id/textview_edit_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:text="@{viewModel.lastWriteDate}"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_title"
                tools:text="2022-06-15 16:42:33" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_edit_date">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_body_text" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_view_collection" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/textview_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{viewModel.data}"
                android:textIsSelectable="true"
                android:visibility="@{viewModel.currentTab == 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tablayout_collection"
                tools:text="본문" />

            <TextView
                android:id="@+id/textview_web_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_web_url"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isWebListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tablayout_collection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_web_link_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isWebListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_web_link_label" />

            <TextView
                android:id="@+id/textview_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_phone"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isPhoneListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_web_link_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_phone_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isPhoneListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_phone_label" />

            <TextView
                android:id="@+id/textview_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_email"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isEmailListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_phone_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_email_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.currentTab == 1 &amp;&amp; !viewModel.isEmailListEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_email_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>